hospital-management/force-app/main/default/objects/Appointment__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <label>Doctor</label>
    <type>Lookup</type>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Doctor_Appointments</relationshipName>
    <required>true</required>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>