hospital-management/force-app/main/default/objects/Appointment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <type>Lookup</type>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Patient_Appointments</relationshipName>
    <required>true</required>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>ion="1.0" encoding="UTF-8"?>
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <type>Lookup</type>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <required>true</required>
</CustomField>